# pico-ultrasound

./: .gitignore  CMakeLists.txt  Readme.md  flash.sh
src/: chirp.pio  chirp_buffer.h  generate_chirp_buffer.py  main.cpp  read_data.py
